@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-07-06 DP        Prompt the user to cancel running queries before closing the Query tool.
     <li>2005-07-04 DP        Check for and display asynchronous notifications in the query tool.
     <li>2005-06-21 AP        typo fixes, rename "initial db" to "maintenance db"
     <li>2005-06-19 AP        pgAgent moved under server, some more fixes
